Log in
Skip to main content
Skip to sidebar
Dashboards
Projects
Issues
eazyBI
Give feedback to Atlassian
Help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Acknowledged notifications
Core Server
SERVER-47658
Add diagnostics to validation of multikey errors
Undo Transition
Closed
Export
null
XML
Word
Printable
JSON
Details
Type:
Bug
Resolution:
Fixed
Priority:
Major - P3
Fix Version/s:
4.4.0-rc3
,
4.7.0
Affects Version/s:
None
Component/s:
Storage
Labels:
None
Field Tab
Aha! Info
Backwards Compatibility:
Fully Compatible
Operating System:
ALL
Backport Requested:
v4.4
Sprint:
Execution Team 2020-05-04
Linked BF Score:
135
CAR Domain/s:
None
Aha! Reference:
None
Tracking Level:
None
Risk Status:
None
Exec Notes:
None
Goal Name(s):
None
Goal Link:
None
Description
We should add the following:
Log the timestamp background validation is reading at
Introduce a failpoint to crash the system with a core dump when discovering a multikey validation error.
Attachments
Activity
People
Assignee:
Daniel Gottlieb (Inactive)
Reporter:
Daniel Gottlieb (Inactive)
Participants:
Daniel Gottlieb
,
Githook User
Votes
:
0
Vote for this issue
Watchers:
6
Start watching this issue
Dates
Created:
Apr 20 2020 02:56:12 PM UTC
Updated:
Oct 29 2023 10:09:16 PM UTC
Resolved:
Apr 24 2020 05:21:09 PM UTC
PagerDuty