SERVER-47658: Improve validate diagnostics, with a focus on multikey failures.